--- a/QuispeAriasColeccionDeJuegos/Base.lproj/Main.storyboard
+++ b/QuispeAriasColeccionDeJuegos/Base.lproj/Main.storyboard
@@ -1,24 +1,137 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="77k-O5-HCH">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="QuispeAriasColeccionDeJuegos" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="McJ-xI-Sor">
+                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="McJ-xI-Sor" secondAttribute="trailing" id="2yZ-Kj-3Tq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="McJ-xI-Sor" secondAttribute="bottom" id="PQX-7b-v7G"/>
+                            <constraint firstItem="McJ-xI-Sor" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="kG3-5o-M8V"/>
+                            <constraint firstItem="McJ-xI-Sor" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="w00-UM-hK6"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="zPE-j0-Lac">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="t1j-WH-gBq">
+                            <connections>
+                                <segue destination="WqU-N2-3w6" kind="show" id="ii1-aL-wRC"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="McJ-xI-Sor" id="cZp-ev-IVC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="976.33587786259534" y="4.9295774647887329"/>
+        </scene>
+        <!--Juegos View Controller-->
+        <scene sceneID="T4P-Sq-qnq">
+            <objects>
+                <viewController id="WqU-N2-3w6" customClass="JuegosViewController" customModule="QuispeAriasColeccionDeJuegos" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cED-dy-fD4">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yzq-zU-lNK">
+                                <rect key="frame" x="56.666666666666657" y="135" width="280" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="280" id="DcD-sS-gz6"/>
+                                    <constraint firstAttribute="height" constant="150" id="oFN-BA-lga"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ingreso Título" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IK3-KV-SJE">
+                                <rect key="frame" x="56.666666666666657" y="305" width="280" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n31-G1-lTZ">
+                                <rect key="frame" x="154" y="359" width="85" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Agregar"/>
+                                <connections>
+                                    <action selector="agregarTapped:" destination="WqU-N2-3w6" eventType="touchUpInside" id="IgO-Vq-eAU"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="71j-NA-SD8"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="IK3-KV-SJE" firstAttribute="width" secondItem="yzq-zU-lNK" secondAttribute="width" multiplier="0.346429" constant="183" id="H2I-3O-eEO"/>
+                            <constraint firstItem="IK3-KV-SJE" firstAttribute="centerX" secondItem="cED-dy-fD4" secondAttribute="centerX" id="ITy-os-fVj"/>
+                            <constraint firstItem="yzq-zU-lNK" firstAttribute="top" secondItem="71j-NA-SD8" secondAttribute="top" constant="32" id="JVZ-rO-07b"/>
+                            <constraint firstItem="IK3-KV-SJE" firstAttribute="centerX" secondItem="yzq-zU-lNK" secondAttribute="centerX" id="RSG-Kg-UjU"/>
+                            <constraint firstItem="n31-G1-lTZ" firstAttribute="top" secondItem="IK3-KV-SJE" secondAttribute="bottom" constant="20" id="VgE-pt-dSJ"/>
+                            <constraint firstItem="yzq-zU-lNK" firstAttribute="centerX" secondItem="cED-dy-fD4" secondAttribute="centerX" id="ZPy-Ud-DsX"/>
+                            <constraint firstItem="IK3-KV-SJE" firstAttribute="top" secondItem="yzq-zU-lNK" secondAttribute="bottom" constant="20" id="dlY-f6-wBm"/>
+                            <constraint firstItem="n31-G1-lTZ" firstAttribute="centerX" secondItem="IK3-KV-SJE" secondAttribute="centerX" id="kES-0N-x03"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="O9F-1q-5jE">
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="camera" id="gGq-SW-mM5">
+                                <connections>
+                                    <action selector="camaraTapped:" destination="WqU-N2-3w6" id="HSg-Rq-uRZ"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Fotos" id="Giu-yI-OlE">
+                                <connections>
+                                    <action selector="fotosTapped:" destination="WqU-N2-3w6" id="A7X-ew-Oit"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="JuegoImageView" destination="yzq-zU-lNK" id="qj7-Q6-aZu"/>
+                        <outlet property="tituloTextField" destination="IK3-KV-SJE" id="npP-Uv-VB7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qix-hm-b4g" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1794.6564885496182" y="4.9295774647887329"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="DVj-mA-VWO">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="77k-O5-HCH" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="SlX-3n-Nce">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="CTj-SI-LNE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="78g-uS-249" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="49.618320610687022" y="4.9295774647887329"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
